Refactored for Coral 0.6, plus lots of progress in the object graphs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 ################################################################################
-# Calcium - Object Model Framework
+# Calcium - Domain Model Framework
 ################################################################################
 
 CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )
