--- a/tests/src/CMakeLists.txt
+++ b/tests/src/CMakeLists.txt
@@ -10,6 +10,7 @@ CORAL_GET_PATH_STRING( CORAL_PATH_STR )
 SET_PROPERTY( DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS "CORAL_PATH=\"${CORAL_PATH_STR}\"" )
 
 # Auxiliary Modules
+ADD_SUBDIRECTORY( camodels )
 ADD_SUBDIRECTORY( erm )
 
 # The test executable
