Fix for the output path of the test logs.

--- a/tests/src/camodels/CMakeLists.txt
+++ b/tests/src/camodels/CMakeLists.txt
@@ -2,6 +2,6 @@
 # camodels - Pure CSL Module
 ################################################################################
 
-PROJECT( CAMODELS )
+project( CAMODELS )
 
 CORAL_BUILD_CSL_MODULE( camodels )
