First functional version of the UndoManager, with basic undo/redo tests.

--- a/tests/src/tests/CMakeLists.txt
+++ b/tests/src/tests/CMakeLists.txt
@@ -11,9 +11,10 @@ INCLUDE_DIRECTORIES(
 )
 
 # Gather source files in the current directory
+FILE( GLOB _HEADERS *.h )
 FILE( GLOB _SOURCES *.cpp )
 
-ADD_EXECUTABLE( tests EXCLUDE_FROM_ALL ${_SOURCES} ${_GENERATED_FILES} )
+ADD_EXECUTABLE( tests EXCLUDE_FROM_ALL ${_HEADERS} ${_SOURCES} ${_GENERATED_FILES} )
 ADD_DEPENDENCIES( tests camodels erm )
 
 CORAL_DEFAULT_TARGET_PROPERTIES( tests )
