CMake install/package rules.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,33 @@ SET( CORAL_PATH
 INCLUDE_DIRECTORIES( ${CORAL_INCLUDE_DIRS} )
 
 ################################################################################
+# Installation
+################################################################################
+
+# enforce a safe default CMAKE_INSTALL_PREFIX
+IF( NOT CMAKE_INSTALL_PREFIX MATCHES "coral-calcium" )
+	SET( CMAKE_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}/coral-calcium" )
+ENDIF()
+
+################################################################################
+# Packaging
+################################################################################
+
+SET( CPACK_PACKAGE_NAME					"coral-calcium" )
+SET( CPACK_PACKAGE_VERSION_MAJOR		"0" )
+SET( CPACK_PACKAGE_VERSION_MINOR		"1" )
+SET( CPACK_PACKAGE_VERSION_PATCH		"0" )
+SET( CPACK_PACKAGE_DESCRIPTION_SUMMARY	"Calcium is a versatile and minimally intrusive domain object model framework." )
+
+IF( WIN32 )
+	SET( CPACK_GENERATOR "ZIP" )
+ELSE()
+	SET( CPACK_GENERATOR "TBZ2" )
+ENDIF()
+
+INCLUDE( CPack )
+
+################################################################################
 # Subdirectories
 ################################################################################
 
