first commit of the persistence feature

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,7 @@ CORAL_GENERATE_MODULE( _GENERATED_FILES ca lua.IState )
 
 INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR}/generated )
 
-FILE( GLOB _SOURCES *.cpp )
+FILE( GLOB _SOURCES *.cpp *.c )
 FILE( GLOB _HEADERS *.h )
 
 ADD_LIBRARY( ca MODULE ${_HEADERS} ${_SOURCES} ${_GENERATED_FILES} )
