first version of StringSerializer. More extensive tests to come

--- a/tests/src/CMakeLists.txt
+++ b/tests/src/CMakeLists.txt
@@ -12,6 +12,7 @@ SET_PROPERTY( DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS "CORAL_PATH=\"${CORA
 # Auxiliary Modules
 ADD_SUBDIRECTORY( camodels )
 ADD_SUBDIRECTORY( erm )
+ADD_SUBDIRECTORY( serialization )
 
 # The test executable
 ADD_SUBDIRECTORY( tests )
