Compatibility with the latest Coral version.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,8 +11,7 @@ FILE( GLOB _HEADERS *.h )
 
 ADD_LIBRARY( ca MODULE ${_HEADERS} ${_SOURCES} ${_GENERATED_FILES} )
 
-CORAL_DEFAULT_TARGET_PROPERTIES( ca )
-CORAL_MODULE_TARGET_PROPERTIES( ca )
+CORAL_MODULE_TARGET( "ca" ca )
 
 TARGET_LINK_LIBRARIES( ca ${CORAL_LIBRARIES} )
 
