--- a/tests/src/erm/CMakeLists.txt
+++ b/tests/src/erm/CMakeLists.txt
@@ -15,8 +15,7 @@ FILE( GLOB _SOURCES *.cpp )
 ADD_LIBRARY( erm MODULE EXCLUDE_FROM_ALL ${_HEADERS} ${_SOURCES} ${_GENERATED_FILES} )
 ADD_DEPENDENCIES( erm ca )
 
-CORAL_DEFAULT_TARGET_PROPERTIES( erm )
-CORAL_MODULE_TARGET_PROPERTIES( erm )
+CORAL_MODULE_TARGET( "erm" erm )
 
 SET_TARGET_PROPERTIES( erm PROPERTIES
 	PROJECT_LABEL "Module ERM"
