--- a/tests/src/tests/CMakeLists.txt
+++ b/tests/src/tests/CMakeLists.txt
@@ -17,7 +17,7 @@ FILE( GLOB _SOURCES *.cpp )
 ADD_EXECUTABLE( tests EXCLUDE_FROM_ALL ${_HEADERS} ${_SOURCES} ${_GENERATED_FILES} )
 ADD_DEPENDENCIES( tests camodels erm )
 
-CORAL_DEFAULT_TARGET_PROPERTIES( tests )
+CORAL_TARGET( tests )
 
 SET_TARGET_PROPERTIES( tests PROPERTIES
 	PROJECT_LABEL "Tests"
