Code review. Renaming classes.

--- a/tests/src/tests/CMakeLists.txt
+++ b/tests/src/tests/CMakeLists.txt
@@ -23,7 +23,7 @@ ADD_EXECUTABLE( tests EXCLUDE_FROM_ALL
 	${_GENERATED_FILES}
 	${CMAKE_SOURCE_DIR}/src/sqlite3.c
 	${CMAKE_SOURCE_DIR}/src/StringSerializer.cpp	
-	${CMAKE_SOURCE_DIR}/src/SQLiteDBConnection.cpp
+	${CMAKE_SOURCE_DIR}/src/SQLiteConnection.cpp
 	${CMAKE_SOURCE_DIR}/src/SQLiteResultSet.cpp
 )
 
