--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,23 +1,23 @@
 # Locate the GTest Framework.
-FIND_PACKAGE( GTest )
+find_package( GTest )
 
 # We can only add the test projects if GTest is available.
-IF( GTEST_FOUND )
+if( GTEST_FOUND )
 
 	# On UNIX, GTest generally depends on pthreads, but CMake does not
 	# add pthreads to GTEST_LIBRARIES. So we do it...
-	IF( UNIX )
-		LIST( APPEND GTEST_LIBRARIES pthread )
-	ENDIF()
+	if( UNIX )
+		list( APPEND GTEST_LIBRARIES pthread )
+	endif()
 
 	# Check if Valgrind is available for the memory check tests
-	FIND_PROGRAM( VALGRIND_COMMAND valgrind )
-	IF( NOT VALGRIND_COMMAND )
-		MESSAGE( "WARNING: valgrind not found - all memory tests have been disabled!" )
-	ENDIF()
+	find_program( VALGRIND_COMMAND valgrind )
+	if( NOT VALGRIND_COMMAND )
+		message( "WARNING: valgrind not found - all memory tests have been disabled!" )
+	endif()
 
-	ADD_SUBDIRECTORY( src )
+	add_subdirectory( src )
 
-ELSE()
-	MESSAGE( "WARNING: gtest not found - all tests have been disabled!" )
-ENDIF()
+else()
+	message( "WARNING: gtest not found - all tests have been disabled!" )
+endif()
