Improved project organization + minor code cleanups.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,11 +12,11 @@ CORAL_GENERATE_MODULE( _GENERATED_FILES ca lua.IState )
 
 include_directories( ${CMAKE_CURRENT_BINARY_DIR}/generated )
 
-file( GLOB HEADER_FILES *.h )
-file( GLOB SOURCE_FILES *.cpp )
-file( GLOB SQLITE_FILES sqlite/* )
+file( GLOB coreFiles *.h *.cpp )
+file( GLOB persistenceFiles persistence/*.h persistence/*.cpp )
+file( GLOB sqliteFiles persistence/sqlite/* )
 
-add_library( ca MODULE ${HEADER_FILES} ${SOURCE_FILES} ${SQLITE_FILES} ${_GENERATED_FILES} )
+add_library( ca MODULE ${coreFiles} ${persistenceFiles} ${sqliteFiles} ${_GENERATED_FILES} )
 
 CORAL_MODULE_TARGET( "ca" ca )
 
@@ -26,12 +26,9 @@ CORAL_MODULE_TARGET( "ca" ca )
 
 source_group( "@Generated" FILES ${_GENERATED_FILES} )
 
-file( GLOB coreFiles Model* Object* Service* Space* Universe* Module* )
 source_group( "Core" FILES ${coreFiles} )
-
-file( GLOB persistenceFiles *Persister* )
 source_group( "Persistence" FILES ${persistenceFiles} )
-source_group( "Persistence\\SQLite" FILES ${SQLITE_FILES} )
+source_group( "Persistence\\SQLite" FILES ${sqliteFiles} )
 
 source_group( "Undo" FILES "UndoManager.cpp" )
 
