--- a/tests/src/tests/CMakeLists.txt
+++ b/tests/src/tests/CMakeLists.txt
@@ -15,10 +15,10 @@ include_directories(
 
 # Calcium sources replicated here for testing
 set( REPLICATED_MODULE_FILES
-	${CA_SOURCE_DIR}/sqlite/sqlite3.c
-	${CA_SOURCE_DIR}/sqlite/StringSerializer.cpp
-	${CA_SOURCE_DIR}/sqlite/SQLiteConnection.cpp
-	${CA_SOURCE_DIR}/sqlite/SQLiteResultSet.cpp
+	${CA_SOURCE_DIR}/persistence/StringSerializer.cpp
+	${CA_SOURCE_DIR}/persistence/sqlite/sqlite3.c
+	${CA_SOURCE_DIR}/persistence/sqlite/SQLiteConnection.cpp
+	${CA_SOURCE_DIR}/persistence/sqlite/SQLiteResultSet.cpp
 )
 
 # Gather source files in the current directory
