Trying to include new tests to build.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Locate the GTest Framework.
+#Locate the GTest Framework.
 find_package( GTest )
 
 # We can only add the test projects if GTest is available.
@@ -19,6 +19,8 @@ if( GTEST_FOUND )
 	add_subdirectory( src )
 	add_subdirectory( dom1 )
 	add_subdirectory( dom2 )
+	
+	ADD_CUSTOM_TARGET( tests_all DEPENDS tests tests_dom1 tests_dom2 )
 
 else()
 	message( "WARNING: gtest not found - all tests have been disabled!" )
