--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -20,7 +20,7 @@ if( GTEST_FOUND )
 	add_subdirectory( dom1 )
 	add_subdirectory( dom2 )
 	
-	ADD_CUSTOM_TARGET( tests_all DEPENDS tests tests_dom1 tests_dom2 )
+	ADD_CUSTOM_TARGET( tests DEPENDS testsCore tests_dom1 tests_dom2 )
 
 else()
 	message( "WARNING: gtest not found - all tests have been disabled!" )
