Trying to include new tests to build.

--- a/tests/dom1/CMakeLists.txt
+++ b/tests/dom1/CMakeLists.txt
@@ -11,6 +11,7 @@ PROJECT( TESTS_DOM1 )
 
 SET( CORAL_PATH
 	"${CORAL_ROOT}/modules"
+	"${CORAL_ROOT}/lib"
 	"${CMAKE_SOURCE_DIR}/modules"
     "${CMAKE_BINARY_DIR}/modules"
 	"${CMAKE_BINARY_DIR}/modules/dom1"
