--- a/tests/src/tests/CMakeLists.txt
+++ b/tests/src/tests/CMakeLists.txt
@@ -2,7 +2,7 @@
 # The 'tests' executable
 ################################################################################
 
-project( TESTSCORE )
+project( TESTS_CORE )
 
 include_directories(
 	${GTEST_INCLUDE_DIRS}
@@ -25,39 +25,40 @@ set( REPLICATED_MODULE_FILES
 file( GLOB _HEADERS *.h )
 file( GLOB _SOURCES *.cpp persistence/*.cpp )
 
-add_executable( testsCore EXCLUDE_FROM_ALL ${REPLICATED_MODULE_FILES} ${_HEADERS} ${_SOURCES} )
+add_executable( tests_core EXCLUDE_FROM_ALL ${REPLICATED_MODULE_FILES} ${_HEADERS} ${_SOURCES} )
 
-add_dependencies( testsCore camodels erm serialization )
+add_dependencies( tests_core camodels erm serialization )
 
-CORAL_TARGET( testsCore )
+CORAL_TARGET( tests_core )
 
-set_target_properties( testsCore PROPERTIES
+set_target_properties( tests_core PROPERTIES
 	PROJECT_LABEL "Tests Core"
 )
 
-target_link_libraries( testsCore ${GTEST_LIBRARIES} )
+target_link_libraries( tests_core ${GTEST_LIBRARIES} )
 
 ################################################################################
 # Register the test
 ################################################################################
+
 file( MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/tests/output )
 add_test(
-	NAME testsCore
-	COMMAND $<TARGET_FILE:testsCore> --gtest_output=xml:../../output/testsCore$<CONFIGURATION>.xml
+	NAME tests_core
+	COMMAND $<TARGET_FILE:tests_core> --gtest_output=xml:../../output/tests_core$<CONFIGURATION>.xml
 )
-CORAL_TEST_ENVIRONMENT( testsCore )
+CORAL_TEST_ENVIRONMENT( tests_core )
 
 ################################################################################
 # If Valgrind is available, repeat the test checking for memory leaks
 ################################################################################
 if( VALGRIND_COMMAND )
 	add_test(
-		NAME testsCore_MemoryCheck
+		NAME tests_core_MemoryCheck
 		COMMAND ${VALGRIND_COMMAND} --leak-check=full --show-reachable=yes --num-callers=30 --dsymutil=yes
 			--log-file=${CMAKE_BINARY_DIR}/Valgrind$<CONFIGURATION>.log --error-exitcode=13
-			--suppressions=${CMAKE_SOURCE_DIR}/tests/valgrind.supp $<TARGET_FILE:testsCore>
+			--suppressions=${CMAKE_SOURCE_DIR}/tests/valgrind.supp $<TARGET_FILE:tests_core>
 	)
-	CORAL_TEST_ENVIRONMENT( testsCore_MemoryCheck )
+	CORAL_TEST_ENVIRONMENT( tests_core_MemoryCheck )
 endif()
 
 ################################################################################
