Simplifying Database schema. Integrity test of database after new version is saved. Part of #10

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,7 +21,28 @@ if( GTEST_FOUND )
 	add_subdirectory( dom2 )
 	
 	ADD_CUSTOM_TARGET( tests DEPENDS testsCore tests_dom1 tests_dom2 )
+	
+	FILE( MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/tests/output )
+	ADD_TEST(
+		NAME tests_dom1_pass1
+		COMMAND $<TARGET_FILE:tests_dom1> --gtest_output=xml:../output/TestsDom1Pass1$<CONFIGURATION>.xml --gtest_filter=*pass1*
+	)
+	CORAL_TEST_ENVIRONMENT( tests_dom1_pass1 )
 
+	FILE( MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/tests/output )
+	ADD_TEST(
+		NAME tests_dom2
+		COMMAND $<TARGET_FILE:tests_dom2> --gtest_output=xml:../output/TestsDom2$<CONFIGURATION>.xml
+	)
+	CORAL_TEST_ENVIRONMENT( tests_dom2 )
+	
+	FILE( MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/tests/output )
+	ADD_TEST(
+		NAME tests_dom1_pass2
+		COMMAND $<TARGET_FILE:tests_dom1> --gtest_output=xml:../output/TestsDom1Pass2$<CONFIGURATION>.xml --gtest_filter=*pass2*
+	)
+	CORAL_TEST_ENVIRONMENT( tests_dom1_pass2 )
+	
 else()
 	message( "WARNING: gtest not found - all tests have been disabled!" )
 endif()
