--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,8 @@ project( CALCIUM )
 ################################################################################
 
 # Load Coral's CMake package
-set( CMAKE_MODULE_PATH "${CORAL_ROOT}/cmake" "$ENV{CORAL_ROOT}/cmake" ${CMAKE_MODULE_PATH} )
+file( TO_CMAKE_PATH "$ENV{CORAL_ROOT}" CORAL_ROOT_ENV )
+set( CMAKE_MODULE_PATH "${CORAL_ROOT}/cmake" "${CORAL_ROOT_ENV}/cmake" ${CMAKE_MODULE_PATH} )
 find_package( Coral REQUIRED )
 
 set( CORAL_PATH
