Disabled support for thread safety in SQLite.
This should solve a pthreads-related issue on Linux.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,8 @@ file( GLOB coreFiles *.h *.cpp )
 file( GLOB persistenceFiles persistence/*.h persistence/*.cpp )
 file( GLOB sqliteFiles persistence/sqlite/* )
 
+set_property( DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS "SQLITE_THREADSAFE=0" )
+
 add_library( ca MODULE ${coreFiles} ${persistenceFiles} ${sqliteFiles} ${_GENERATED_FILES} )
 
 CORAL_MODULE_TARGET( "ca" ca )
