--- a/tests/src/CMakeLists.txt
+++ b/tests/src/CMakeLists.txt
@@ -4,8 +4,7 @@
 
 # Pass the CORAL_PATH as a precompiler definition to all subprojects
 CORAL_GET_PATH_STRING( CORAL_PATH_STR )
-set_property( DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS
-	"CORAL_PATH=\"${CORAL_ROOT}/modules,${CORAL_PATH_STR}\"" )
+set_property( DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS "CORAL_PATH=\"${CORAL_PATH_STR}\"" )
 
 # Auxiliary Modules
 add_subdirectory( camodels )
