Test for shared camodel definitions

--- a/tests/src/camodels/CMakeLists.txt
+++ b/tests/src/camodels/CMakeLists.txt
@@ -1,7 +1,28 @@
 ################################################################################
-# camodels - Pure CSL Module
+# camodels modules
 ################################################################################
 
 project( CAMODELS )
 
-CORAL_BUILD_CSL_MODULE( camodels )
+# Run the coral compiler on the module
+CORAL_GENERATE_MODULE( _GENERATED_FILES camodels )
+
+include_directories( ${CMAKE_CURRENT_BINARY_DIR}/generated )
+
+file( GLOB _HEADERS *.h )
+file( GLOB _SOURCES *.cpp )
+
+add_library( camodels MODULE EXCLUDE_FROM_ALL ${_HEADERS} ${_SOURCES} ${_GENERATED_FILES} )
+add_dependencies( camodels erm ca )
+
+CORAL_MODULE_TARGET( "camodels" camodels )
+
+set_target_properties( camodels PROPERTIES
+	PROJECT_LABEL "camodels"
+)
+
+################################################################################
+# Source Groups
+################################################################################
+
+source_group( "@Generated" FILES ${_GENERATED_FILES} )
