Attempt to fix linux build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ cmake_minimum_required( VERSION 2.6 )
 
 project( CALCIUM )
 
+SET( CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-ldl" )
+
 ################################################################################
 # Setup Coral
 ################################################################################
